
--------------------------------------------------------------------------------
Silver 0.4.0      ?? ??, ??

 - TODO: improve MWDA
 - TODO: remove \r stripping

--------------------------------------------------------------------------------
Silver 0.3.6      Sep 30, 2013

 - Future compatibility note:
   - Make sure your whitespace terminals account for \r. Future versions of
     Silver will no longer automatically strip these!
 - New modular well-definedness analysis implemented (currently alpha quality)
   - Finds duplicated equations by default.
   - See wiki for details, full analysis enabled with --warn-all
 - 'aspect default production' introduced to allow default equations for attributes
 - 'option' declarations introduce "optional components" of a host language
 - Introduced "closed nonterminals" that forbid new attributes (without a default)
 - Updates to the 'simple' tutorial, cleanups.
 - Improve build process - won't rebuild parsers unnecessarily.
 - Slight change to 'core' import semantics, most users shouldn't notice.
 - Introduce standard library 'Location' type.
   - Obtainable directly from terminals, now, too.
 - Introduce alpha-quality 'annotations' language feature
   - Including core 'location' that the parser can fill in for concrete syntax
 - 'exports' now also implicity 'imports'
 - Bugs fixes and code quality improvements to the compiler.
 - 'marking' modifier for tokens for copper modular determinism analysis
 - Prototype string templating feature (s"""hello ${who}""")
   - note: syntax subject to change
 - New library for unweighted directed graphs, silver:util:raw:graph

--------------------------------------------------------------------------------
Silver 0.3.5      Mar 19, 2012

 - Now hosted on google code! http://code.google.com/p/silver
 - New, recommended, short form syntax for concrete production listings
 - Shell scripts for installing 'silver' script and gedit support