@@ -128,6 +128,7 @@
 <keyword>parser</keyword>
 <keyword>parse</keyword>
 <keyword>attribute</keyword>
+<keyword>annotation</keyword>
 <keyword>function</keyword>
 <keyword>local</keyword>
 <keyword>closed</keyword>
