@@ -4,6 +4,9 @@ Silver 0.4.0      ?? ??, ??
 
  - TODO: improve MWDA
  - TODO: remove \r stripping
+ - New 'Either' type in standard library prelude.
+ - 'ParseResult' now includes information about syntax errors
+ - Silver compiler now reports syntax errors in all files, not just the first.
 
 --------------------------------------------------------------------------------
 Silver 0.3.6      Sep 30, 2013
